2002-03-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c:
	(yelp_window_get_current_uri): added, needed for session
	  management.

	* src/yelp-html.c (yh_free_stream_data): removed debug printout.

	* src/yelp-view-index.c:
	- Fixed #67954
	(yvi_html_url_selected_cb): implemented.
	(yelp_view_index_show_uri): fixed compile warning.

	* src/yelp-window.c:
	(yw_handle_url): check if url starts with index:, if so, let
	  YelpViewIndex handle it.
	(yelp_window_new): connect to url_selected on YelpViewIndex.

	* src/yelp-view-index.c:
	- added URL_SELECTED signal.
	(yvi_index_selection_changed_cb): emit url_selected.
	(yvi_entry_activated_cb): fixed warning.
	(yvi_filter_idle): same.
	(yelp_view_index_show_uri): added/impl.

	* src/yelp-view-content.c: removed the title-changed signal for
	  now. I should really make all views derive from the same
	  object. Lots of things are similar. (at least for YelpViewIndex
	  and YelpViewContent.

	* src/yelp-scrollkeeper.c:
	(ys_parse_index_item): 
	- add a ? before the link.
	- add a index: before the uri
	  The uri will now be index:ghelp:... (not soo nice but it's to
	  make the window know which view it is).

2002-03-02  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-index.c:
	- removed lots of debug output.
	(yvi_entry_changed_cb): implemented. call filter from idle.
	(yvi_filter_idle): added/impl.
	(yvi_search): removed.

	* src/yelp-section.c:
	(yelp_section_compare): take the arguments as gconstpointer so the
	  function doesn't have to be cast everytime used.

	* src/yelp-scrollkeeper.c:
	(ys_parse_index_item): 
	- don't add title if it's not valid utf8. Is this check needed?
	- call strdown on all title's in the index-terms.

	* src/yelp-index-model.c:
	(yelp_index_model_filter): added/impl.

	* src/yelp-view-index.c:
	(yvi_index_selection_changed_cb): use the column-enum to specify
	  columns.

	* src/yelp-index-model.c:
	(yim_init): initially set index_words to NULL.